--- a/Demo.Framework/Demo.Framework.csproj
+++ b/Demo.Framework/Demo.Framework.csproj
@@ -141,6 +141,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Resources.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Frost.DirectX.Common\Frost.DirectX.Common.csproj">
