--- a/Demo.Framework/Demo.Framework.csproj
+++ b/Demo.Framework/Demo.Framework.csproj
@@ -133,8 +133,10 @@
   <ItemGroup>
     <Compile Include="D3D10Renderer.cs" />
     <Compile Include="DemoApplication.cs" />
+    <Compile Include="DemoInterface.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IDemoContext.cs" />
+    <Compile Include="DemoSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
