--- a/Demo.Framework/Demo.Framework.csproj
+++ b/Demo.Framework/Demo.Framework.csproj
@@ -111,19 +111,19 @@
   <ItemGroup>
     <Reference Include="SharpDX, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\sharpdx\SharpDX.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.D3DCompiler, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\sharpdx\SharpDX.D3DCompiler.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.D3DCompiler.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D10, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\sharpdx\SharpDX.Direct3D10.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.Direct3D10.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.DXGI, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\sharpdx\SharpDX.DXGI.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.DXGI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
