--- a/Frost.DirectX.Common/Frost.DirectX.Common.csproj
+++ b/Frost.DirectX.Common/Frost.DirectX.Common.csproj
@@ -110,16 +110,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharpDX">
-      <HintPath>..\sharpdx\SharpDX.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct2D1">
-      <HintPath>..\sharpdx\SharpDX.Direct2D1.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.Direct2D1.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D10">
-      <HintPath>..\sharpdx\SharpDX.Direct3D10.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.Direct3D10.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.DXGI">
-      <HintPath>..\sharpdx\SharpDX.DXGI.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.DXGI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
