--- a/Frost.DirectX.Formatting/Frost.DirectX.Formatting.csproj
+++ b/Frost.DirectX.Formatting/Frost.DirectX.Formatting.csproj
@@ -109,10 +109,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharpDX">
-      <HintPath>..\sharpdx\SharpDX.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct2D1">
-      <HintPath>..\sharpdx\SharpDX.Direct2D1.dll</HintPath>
+      <HintPath>..\External\SharpDX\SharpDX.Direct2D1.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
