--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Effects\IEffectSettings.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
+    <Compile Include="Formatting\Aggregator.cs" />
     <Compile Include="Formatting\BreakIndex.cs" />
     <Compile Include="Formatting\Breakpoint.cs" />
     <Compile Include="Formatting\Demerits.cs" />
@@ -140,6 +141,8 @@
     <Compile Include="Formatting\FontFeature.cs" />
     <Compile Include="Formatting\FontFeatureCollection.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
+    <Compile Include="Formatting\IAggregatorSink.cs" />
+    <Compile Include="Formatting\IAnalysisProvider.cs" />
     <Compile Include="Formatting\IFormatter.cs" />
     <Compile Include="Formatting\ILineProvider.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
