--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Formatting\BreakCondition.cs" />
     <Compile Include="Formatting\BreakIndex.cs" />
     <Compile Include="Formatting\Breakpoint.cs" />
+    <Compile Include="Formatting\ShapedCluster.cs" />
     <Compile Include="Formatting\Demerits.cs" />
     <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="Formatting\FontFeature.cs" />
@@ -144,7 +145,8 @@
     <Compile Include="Formatting\IDecoration.cs" />
     <Compile Include="Formatting\IFormatter.cs" />
     <Compile Include="Formatting\ILineProvider.cs" />
-    <Compile Include="Formatting\ITextItem.cs" />
+    <Compile Include="Formatting\ShapedGlyph.cs" />
+    <Compile Include="Formatting\ShapedSpan.cs" />
     <Compile Include="Formatting\TextShaper.cs" />
     <Compile Include="Formatting\IShapedText.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
